--- a/sass/_images.scss
+++ b/sass/_images.scss
@@ -4,5 +4,6 @@ $imagen-encuentra-padding: 5rem 3rem 0 5rem;
 $imagen-publica-padding: 5rem 3rem 0 6rem;
 $imagen-ciudades-width: 200px;
 
-$carousel-width: 300px;
+$carousel-width: 310px;
 $imagen-nosotros-width: 200px;
+$imagen-principal-responsive-xs: 24rem;
