--- a/sass/style.scss
+++ b/sass/style.scss
@@ -260,6 +260,9 @@ a {
 .carousel-size{
   width: 255px;
 }
+
+
+
 /**MEDIAQUERIES**/
 
 @media only screen and (min-width: 300px) and (max-width: 590px) {
@@ -306,6 +309,27 @@ a {
   .mapa {
     display: none;
   }
+  .card{
+    width: 16rem;
+  
+    .card-body{
+      width: 16rem;
+    }
+  }
+ 
+}
+@media only screen and (min-width: 450px) and (max-width: 590px){
+  .alineacion{
+    display: block;
+    margin: 0 auto;
+  }
+  .card{
+    width: 16rem;
+  
+    .card-body{
+      width: 16rem;
+    }
+  }
 }
 @media only screen and (min-width: 591px) and (max-width: 767px) {
   .imagen-principal {
@@ -337,6 +361,11 @@ a {
     flex-wrap: nowrap;
     justify-content: center;
   }
+  .mapa {
+    display: none;
+  }
+
+  
 }
 @media only screen and (min-width: 768px) and (max-width: 960px) {
   .contenido-header {
@@ -365,4 +394,9 @@ a {
     text-align: center;
     left: 49rem;
   }
+
+  .mapa {
+    display: none;
+  }
 }
+
