--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,22 @@ a {
   color: #6c5ce7;
 }
 
+/**Animaciones**/
+h1 {
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
 /**logo**/
 .logo {
   width: 200px;
@@ -221,9 +237,6 @@ a {
 .nosotros img {
   width: 200px;
 }
-.nosotros img:hover {
-  transform: scale(1.2);
-}
 
 /**FIN-SECCION EXTRA**/
 .indigo {
@@ -264,6 +277,8 @@ a {
 
 .container-dos {
   margin-right: 191px;
+  position: relative;
+  top: 8rem;
 }
 
 .mapa {
@@ -284,6 +299,57 @@ a {
 
 .carousel-size {
   width: 255px;
+}
+
+.menu-navegacion {
+  position: fixed;
+  top: 4.5rem;
+  background-color: white;
+  z-index: 2;
+  padding: 0;
+  margin: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.navegacion-busqueda {
+  position: fixed;
+  top: 0;
+  z-index: 4;
+  padding: 0;
+  margin: 0;
+  right: 0;
+  left: 0;
+  height: 4.5rem;
+}
+
+.form-group {
+  margin-left: 10px;
+}
+.form-group .form-control-range {
+  width: 80%;
+}
+
+.form-check {
+  margin: 0 10px;
+}
+
+label {
+  display: inline;
+  font: 1rem "inter", sans-serif;
+  color: #6c5ce7;
+}
+
+.date,
+.start {
+  margin: 1rem 10px;
+  color: #6c5ce7;
+}
+
+.disponibilidad {
+  margin-bottom: 1rem;
 }
 
 /**MEDIAQUERIES**/
@@ -341,7 +407,7 @@ a {
   }
 
   .enlace-arriba {
-    bottom: 12rem;
+    bottom: 23rem;
   }
 
   .mapa {
@@ -375,7 +441,7 @@ a {
 }
 @media only screen and (min-width: 591px) and (max-width: 767px) {
   .imagen-principal {
-    width: 24rem;
+    width: 24rem !important;
   }
 
   .contenido-header {
@@ -409,15 +475,24 @@ a {
   .mapa {
     display: none;
   }
-}
-.row-size-md {
-  width: 37rem;
-  margin: 0;
-}
 
+  .enlace-arriba {
+    bottom: 20rem;
+  }
+
+  .row-size-md {
+    width: 37rem;
+    margin: 0;
+  }
+}
 @media only screen and (min-width: 768px) and (max-width: 960px) {
+  .contenido-header {
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+  }
   .contenido-header .imagen-principal {
-    width: 22rem;
+    width: 24rem;
   }
 
   .contenido-principal {
@@ -444,6 +519,10 @@ a {
 
   .mapa {
     display: none;
+  }
+
+  .enlace-arriba {
+    bottom: 18rem;
   }
 }
 @media only screen and (min-width: 961px) and (max-width: 1299px) {
