arreglo de margins y position en busqueda

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ h1 {
   font-size: 2.5em !important;
   font-weight: 800;
   color: #6c5ce7;
+  margin-top: 2rem;
 }
 
 h2 {
@@ -432,11 +433,15 @@ label {
   }
 
   .cards-habitaciones {
-    margin-top: 10rem;
+    margin-top: -4rem;
   }
 
   .boton-enviar-busqueda {
     margin-left: 1rem;
+  }
+
+  .menu-navegacion {
+    position: relative;
   }
 }
 @media only screen and (min-width: 450px) and (max-width: 590px) {
