--- a/sass/style.scss
+++ b/sass/style.scss
@@ -299,6 +299,7 @@ h1 {
   right: 0;
   left: 0;
   height: 4.5rem;
+  
 }
 
 .form-group {
@@ -421,6 +422,13 @@ label {
       width: 16rem;
     }
   }
+  .menu-navegacion{
+    position: relative;
+  }
+  .navbar-mobile {
+    background: white;
+    padding: 1rem;
+  }
 }
 @media only screen and (min-width: 591px) and (max-width: 767px) {
   .imagen-principal {
@@ -462,18 +470,33 @@ label {
     width: 37rem;
     margin: 0;
   }
+  .menu-navegacion{
+    position: relative;
+  }
+  .navbar-mobile {
+    background: white;
+    padding: 1rem;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 960px) {
   .contenido-header {
     flex-wrap: wrap;
     justify-content: center;
-    text-align: center;
+    text-align: left;
+    .subtitulo{
+      font-size: 16px;
+      margin-top: 0;
+    }
     .imagen-principal {
       width: 24rem;
+      margin-top: 32px;
     }
+    
   }
-
+.titulo{
+  font-size: 2rem !important;
+}
   .contenido-principal {
     text-align: center;
 
@@ -501,6 +524,20 @@ label {
   }
   .enlace-arriba {
     bottom: 18rem;
+  }
+  .row-size-md {
+    width: 37rem;
+    margin: 0;
+  }
+  .alineacion{
+    margin: 0 auto;
+  }
+  .menu-navegacion{
+    position: relative;
+  }
+  .navbar-mobile {
+    background: white;
+    padding: 1rem;
   }
 }
 @media only screen and (min-width: 961px) and (max-width: 1299px) {
