--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -6,7 +6,7 @@ $body-font-family:"Inter", sans-serif;
 
 /** h1 **/
 $h1-font-family: Montserrat, sans-serif;
-$h1-font-size: 2.5em !important;
+$h1-font-size: 2.5rem !important;
 $h1-font-weight: 800;
 
 /**FIN h1**/
@@ -21,7 +21,7 @@ $h3-font-size: 1.5rem;
 /**h4**/
 $h4-font-size: 1.3rem;
 
-$subtitulo-font-size:20px;
+$subtitulo-font-size:18px;
 
 /**h5**//**card title**/
 $h5-font-size: 1rem;
