--- a/sass/style.scss
+++ b/sass/style.scss
@@ -486,7 +486,7 @@ label {
     text-align: left;
     .subtitulo{
       font-size: 16px;
-      margin-top: 0;
+      margin-top: 53px;
     }
     .imagen-principal {
       width: 24rem;
