--- a/css/style.css
+++ b/css/style.css
@@ -529,7 +529,7 @@ label {
   }
   .contenido-header .subtitulo {
     font-size: 16px;
-    margin-top: 0;
+    margin-top: 53px;
   }
   .contenido-header .imagen-principal {
     width: 24rem;
